!0.0.2 Fix: settings tmuxinator and bootstrap

--- a/{{cookiecutter.repo_name}}/etc/tmuxinator/{{cookiecutter.repo_name}}.yml
+++ b/{{cookiecutter.repo_name}}/etc/tmuxinator/{{cookiecutter.repo_name}}.yml
@@ -1,6 +1,6 @@
 # ~/.tmuxinator/{{cookiecutter.repo_name}}.yml
 name: {{cookiecutter.repo_name}}
-root: <%= ENV["PROJECTS"] %>/ansible/roles/{{cookiecutter.repo_name}}
+root: <%= ENV["PROJECTS"] %>/docker/{{cookiecutter.repo_name}}
 tmux_options: -2
 # Optional tmux socket
 # socket_name: foo
